# psono-cli-client

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  create-dev-env.sh  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/psonoclient/: __init__.py  cli.py  client.py  fields.py  misc.py  parser.py
src/psonoclient/commands/: __init__.py  base.py  ls.py
tests/: .secrets.example  test.sh
